--- a/docs/esterni/analisi_dei_requisiti/analisi_dei_requisiti.tex
+++ b/docs/esterni/analisi_dei_requisiti/analisi_dei_requisiti.tex
@@ -107,11 +107,12 @@ Per il completamento del progetto il proponente richiede che siano ottenuti i se
 \textbf{Attori primari}: Venditore con wallet connesso.\\
 \textbf{Precondizioni}: Il venditore usa il servizio ShopChain e vorrebbe avere più informazioni sul suo utilizzo.\\
 \textbf{Postcondizioni}: Il venditore consulta il manuale utente di ShopChain.\\
-\textbf{Scenario principale}:\\
+\textbf{Scenario principale}:
 \begin{enumerate}
 \item Al venditore viene fornito il manuale utente già dall'acquisizione del prodotto ShopChain.
 \item Il venditore è libero di consultare il manuale in ogni momento.
 \end{enumerate}
+\textbf{Requisiti collegati}: RNO03.
 
 \includegraphics[width=0.9\textwidth]{UC_WAV2}
 \captionof{figure}{Caso d'uso UC2}
@@ -122,7 +123,8 @@ Per il completamento del progetto il proponente richiede che siano ottenuti i se
 \textbf{Precondizioni}: Il venditore vuole accedere alla webapp.\\
 \textbf{Postcondizioni}: Il venditore si è connesso alla webapp con Metamask.\\
 \textbf{Scenario principale}:
-Il venditore usando Metamask, si connette alla webapp con il proprio wallet.
+Il venditore usando Metamask, si connette alla webapp con il proprio wallet.\\
+\textbf{Requisiti collegati}: RFO01, RFO34.
 
 \includegraphics[width=0.9\textwidth]{UC_WAV3}
 \captionof{figure}{Casi d'uso UC3 e UC4}
@@ -138,6 +140,7 @@ Il venditore usando Metamask, si connette alla webapp con il proprio wallet.
 \item Il venditore può scegliere che tipo di transazioni vedere (tutte, completate, in attesa);
 \item Il sistema mostra al venditore l'elenco delle transazioni richieste.
 \end{enumerate}
+\textbf{Requisiti collegati}: RFO03, RFO35, RFO36.
 
 \paragraph{UC4 - visualizzazione dettaglio transazione}\\
 \textbf{Attore primario}: Venditore con wallet connesso.\\
@@ -149,6 +152,7 @@ Il venditore usando Metamask, si connette alla webapp con il proprio wallet.
 \item Il venditore seleziona una delle transazioni dall'elenco;
 \item Il venditore visualizza i dettagli della singola transazione.
 \end{enumerate}
+\textbf{Requisiti collegati}: RFO37, RFO38, RFO40.
 
 \includegraphics[width=0.9\textwidth]{UC3D}
 \captionof{figure}{Casi d'uso UC3.1, UC3.2 ed UC3.3}
@@ -181,6 +185,7 @@ Il venditore usando Metamask, si connette alla webapp con il proprio wallet.
 \textbf{Precondizioni}: Il venditore vuole visualizzare lo stato di una transazione.\\
 \textbf{Postcondizioni}: Il venditore visualizza lo stato di una transazione.\\
 \textbf{Scenario principale}: Viene visualizzato lo stato della transazione.\\
+\textbf{Requisiti collegati}: RFO04.
 
 \paragraph{UC4.2 - Visualizzazione QR Code}\\
 \textbf{Attore primario}: Venditore con wallet connesso.\\
@@ -191,18 +196,21 @@ Il venditore usando Metamask, si connette alla webapp con il proprio wallet.
 \item Viene visualizzato il QR Code della transazione in attesa selezionata;
 \item Il venditore può stampare il QR Code applicarlo sul pacco del prodotto.
 \end{enumerate}
+\textbf{Requisiti collegati}: RFO05, RFO51.
 
 \paragraph{UC4.3 - Visualizzazione importo transazione}\\
 \textbf{Attore primario}: Venditore con wallet connesso.\\
 \textbf{Precondizioni}: Il venditore vuole visualizzare l'importo di una transazione.\\
 \textbf{Postcondizioni}: Il venditore visualizza l'importo di una transazione.\\
 \textbf{Scenario principale}: Viene visualizzato l'importo della transazione in dollari.\\
+\textbf{Requisiti collegati}: RFO06.
 
 \paragraph{UC4.4 - Visualizzazione scadenza transazione}\\
 \textbf{Attore primario}: Venditore  con wallet connesso.\\
 \textbf{Precondizioni}: Il venditore vuole visualizzare la scadenza di una transazione in attesa.\\
 \textbf{Postcondizioni}: Il venditore visualizza la scadenza di una transazione in attesa.\\
 \textbf{Scenario principale}: Il venditore vede la data della scadenza di una transazione in attesa, oltre la quale l'acquirente riceverà indietro la valuta bloccata.\\
+\textbf{Requisiti collegati}: RFO07, RFO39, RFO41.
 
 \includegraphics[width=0.9\textwidth]{UC_script}
 \captionof{figure}{Casi d'uso UC5 e UC5.1}
@@ -218,19 +226,24 @@ Il venditore usando Metamask, si connette alla webapp con il proprio wallet.
     \item Tramite lo script il prodotto viene pubblicato in blockchain;
     \item Il prodotto è pubblico in blockchain e utilizzabile per fare nuove transazioni.
 \end{enumerate}
+\textbf{Requisiti collegati}: RFO09, RFO43, RFD44, RNO06.\\
 \textbf{Estensione}:
-UC5.1 Errore fallimento pubblicazione prodotto in blockchain:\\
-lo script salva in un file di log il messaggio di errore.
+\begin{enumerate}
+    \item UC5.1 Errore fallimento pubblicazione prodotto in blockchain:\\
+\end{enumerate}
+lo script salva in un file di log il messaggio di errore.\\
+\textbf{Requisiti collegati all'estensione UC5.1}: RFO10.
 
 \includegraphics[width=0.9\textwidth]{UC_LP2}
-\captionof{figure}{Casi d'uso UC7. UC8, UC8.1, UC9 e UC9.1}
+\captionof{figure}{Casi d'uso UC7, UC8, UC8.1, UC9 e UC9.1}
 
 \paragraph{UC7 - Visualizzazione riepilogo transazione}\\
 \textbf{Attore primario}: Acquirente con wallet connesso.\\
 \textbf{Precondizioni}: L'acquirente con wallet connesso vuole effettuare un acquisto usando ShopChain.\\
 \textbf{Postcondizioni}: Il sistema mostra il riepilogo della transazione.\\
 \textbf{Scenario principale}:
-Viene mostrato all'acquirente il riepilogo della transazione con il prezzo in dollari da pagare.
+Viene mostrato all'acquirente il riepilogo della transazione con il prezzo in dollari da pagare.\\
+\textbf{Requisiti collegati}: RFO13.
 
 \paragraph{UC8 - Conferma pagamento}\\
 \textbf{Attore primario}: Acquirente con wallet connesso.\\
@@ -241,12 +254,14 @@ Viene mostrato all'acquirente il riepilogo della transazione con il prezzo in do
     \item Il sistema mostra il riepilogo della transazione;
     \item L'acquirente conferma l'ordine.
 \end{enumerate}
+\textbf{Requisiti collegati}: RFO14.\\
 \textbf{Estensione}:
 UC8.1 Visualizzazione messaggio procedura di pagamento annullata:
 \begin{enumerate}
     \item visualizzazione messaggio procedura di pagamento annullata;
     \item cancellazione sessione di pagamento.
 \end{enumerate}
+\textbf{Requisiti collegati all'estensione UC8.1}: RFO15, RFO16.
 
 \paragraph{UC9 - Pagamento}\\
 \textbf{Attore primario}: Acquirente con wallet connesso.\\
@@ -259,12 +274,14 @@ UC8.1 Visualizzazione messaggio procedura di pagamento annullata:
     \item L'acquirente effettua il pagamento tramite Metamask;
     \item L'ordine è stato pagato.
 \end{enumerate}
-\textbf{Estensioni}:
+\textbf{Requisiti collegati}: RFO17, RFO47.\\
+\textbf{Estensione}:
 UC9.1 Visualizzazione errore pagamento non riuscito:
 \begin{enumerate}
     \item Il pagamento non è stato completato con successo;
     \item Cancellazione sessione di pagamento.
 \end{enumerate}
+\textbf{Requisiti collegati all'estensione UC9.1}: RFO18.
 
 \includegraphics[width=0.9\textwidth]{UC7D}
 \captionof{figure}{Casi d'uso UC7.1 e UC7.2}
@@ -292,6 +309,7 @@ UC9.1 Visualizzazione errore pagamento non riuscito:
 \textbf{Postcondizioni}: L'acquirente accede al sistema.\\
 \textbf{Scenario principale}:
 L'acquirente usando Metamask, si connette con il proprio wallet.
+\textbf{Requisiti collegati}: RFO19.
 
 \includegraphics[width=0.9\textwidth]{UC_WAA2}
 \captionof{figure}{Casi d'uso UC11, UC12 e UC12.1}
@@ -301,7 +319,8 @@ L'acquirente usando Metamask, si connette con il proprio wallet.
 \textbf{Precondizioni}: L'acquirente è connesso con Metamask ed è arrivato alla pagina di conferma ricezione scansionando il QR Code sul pacco del prodotto.\\
 \textbf{Postcondizioni}: L'acquirente visualizza la pagina della transazione relativa al pacco appena ricevuto.\\
 \textbf{Scenario principale}:
-Vengono mostrati i dati relativi alla transazione e un pulsante per confermare la ricezione del pacco.
+Vengono mostrati i dati relativi alla transazione e un pulsante per confermare la ricezione del pacco.\\
+\textbf{Requisiti collegati}: RFO21.
 
 \paragraph{UC12 - Conferma ricezione}\\
 \textbf{Attore primario}: Acquirente con wallet connesso.\\
@@ -312,12 +331,14 @@ Vengono mostrati i dati relativi alla transazione e un pulsante per confermare l
     \item L'acquirente controlla sia tutto corretto e conferma la ricezione del pacco;
     \item Il denaro viene sbloccato e mandato nel wallet del venditore.
 \end{enumerate}
+\textbf{Requisiti collegati}: RFO22, RFO45, RFO46.\\
 \textbf{Estensione}:
 UC12.1 Errore wallet non corretto:
 \begin{enumerate}
     \item Viene mostrato un messaggio di errore spiegando che il wallet con cui è connesso l'acquirente non è corretto.
     \item Si invita a cambiare wallet e riprovare.
 \end{enumerate}
+\textbf{Requisiti collegati all'estensione UC12.1}: RFO23.
 
 \includegraphics[width=0.9\textwidth]{UC_ECA1}
 \captionof{figure}{Caso d'uso UC13}
@@ -328,11 +349,11 @@ UC12.1 Errore wallet non corretto:
 \textbf{Precondizioni}: L'acquirente, nella pagina con la sua lista delle transazioni in e-commerce, non è connesso con Metamask.\\
 \textbf{Postcondizioni}: L'acquirente accede alla pagina con la sua lista delle transazioni in e-commerce.\\
 \textbf{Scenario principale}:
-L'acquirente usando Metamask, si connette con il proprio wallet.
+L'acquirente usando Metamask, si connette con il proprio wallet.\\
+\textbf{Requisiti collegati}: RFO24, RFO48.
 
 \includegraphics[width=0.9\textwidth]{UC_ECA2}
 \captionof{figure}{Casi d'uso UC14 e UC15}
-
 
 \paragraph{UC14 visualizzazione lista transazioni}\\
 \textbf{Attore primario}: Acquirente con wallet connesso. \\
@@ -345,6 +366,8 @@ L'acquirente usando Metamask, si connette con il proprio wallet.
 \item L'acquirente può scegliere che tipo di transazioni vedere (tutte, completate, in attesa);
 \item Il sistema mostra all'acquirente l'elenco delle transazioni richieste.
 \end{enumerate}
+\textbf{Requisiti collegati}: RFO26, RFO49.
+
 \paragraph{UC15 - visualizzazione dettaglio transazione}\\
 \textbf{Attore primario}: Acquirente con wallet connesso.\\
 \textbf{Attore secondario}: Database.\\
@@ -355,6 +378,7 @@ L'acquirente usando Metamask, si connette con il proprio wallet.
 \item L'acquirente seleziona una delle transazioni dall'elenco;
 \item L'acquirente visualizza i dettagli della singola transazione.
 \end{enumerate}
+\textbf{Requisiti collegati}: RFO11, .
 
 \includegraphics[width=0.9\textwidth]{UC14D}
 \captionof{figure}{Casi d'uso UC14.1, UC14.2 e UC14.3}
@@ -386,18 +410,21 @@ L'acquirente usando Metamask, si connette con il proprio wallet.
 \textbf{Precondizioni}: L'acquirente vuole visualizzare lo stato di una transazione.\\
 \textbf{Postcondizioni}: L'acquirente visualizza lo stato di una transazione.\\
 \textbf{Scenario principale}: Viene mostrato lo stato della transazione: in attesa o completata.\\
+\textbf{Requisiti collegati}: RFO27.
 
 \paragraph{UC15.2 - Visualizzazione importo transazione}\\
 \textbf{Attore primario}: Acquirente con wallet connesso.\\
 \textbf{Precondizioni}: L'acquirente vuole visualizzare l'importo di una transazione.\\
 \textbf{Postcondizioni}: L'acquirente visualizza l'importo di una transazione.\\
 \textbf{Scenario principale}: Viene mostrato l'importo della transazione in dollari.\\
+\textbf{Requisiti collegati}: RFO28, RFO29.
 
 \paragraph{UC15.3 - Visualizzazione scadenza transazione}\\
 \textbf{Attore primario}: Acquirente  con wallet connesso.\\
 \textbf{Precondizioni}: L'acquirente vuole visualizzare la scadenza di una transazione in attesa.\\
 \textbf{Postcondizioni}: L'acquirente visualizza la scadenza di una transazione in attesa.\\
 \textbf{Scenario principale}: Viene visualizzata la data della scadenza di una transazione in attesa, oltre la quale l'acquirente riceverà indietro la valuta bloccata.\\
+\textbf{Requisiti collegati}: RFO30.
 
 \includegraphics[width=0.9\textwidth]{UC_controlli}
 \captionof{figure}{Casi d'uso UCa, UCa.1, UCa.2 e UCa.3}
@@ -408,15 +435,21 @@ L'acquirente usando Metamask, si connette con il proprio wallet.
 \textbf{Postcondizioni}:  Il sistema può interagire con la blockchain senza problemi.\\
 \textbf{Scenario principale}:
 Vengono fatti una serie di controlli per la corretta interazione con la blockchain.\\
-\textbf{Estensioni}:
+\textbf{Estensione}: UCa.1 Errore nella connessione alla rete:
 \begin{enumerate}
-    \item UCa.1 Errore nella connessione alla rete:\\
-        Il venditore o l'acquirente è connesso alla rete sbagliata
-    \item UCa.2 Errore transazione non inviata:\\
-        La transazione non è stata inviata correttamente.
-    \item UCa.3 Errore nessun risultato ottenibile:\\
-        La transazione è stata correttamente inviata, ma non è stato ottenuto nessun risultato.
+\item Il venditore o l'acquirente è connesso alla rete sbagliata
 \end{enumerate}
+\textbf{Requisiti collegati all'estensione UCa.1}: RFO31, RFO50.\\
+\textbf{Estensione}: UCa.2 Errore transazione non inviata:
+\begin{enumerate}
+\item La transazione non è stata inviata correttamente.
+\end{enumerate}
+\textbf{Requisiti collegati all'estensione UCa.2}: RFO32.\\
+\textbf{Estensione}: UCa.3 Errore nessun risultato ottenibile:
+\begin{enumerate}
+\item La transazione è stata correttamente inviata, ma non è stato ottenuto nessun risultato.
+\end{enumerate}
+\textbf{Requisiti collegati all'estensione UCa.3}: RFO33.
 
 \section{Requisiti}
 Ogni requisito è identificato da un codice univoco composto da: R(per requisito)+F/N(per la tipologia: funzionale, non funzionale)+O/D/F(per la rilevanza: obbligatorio, desiderabile, facoltativo)+x(un numero univoco a due cifre).
@@ -465,9 +498,7 @@ RFO37 & Il server deve fornire una pagina con i dettagli di un transazione (prez
 \hline
 RFO38 & La persistenza deve tener traccia dei dettagli di un transazione (prezzo, stato, data di creazione, data di chiusura, acquirente e venditore). & Obbligatorio & UC4 \\
 \hline
-RFO39 & La persistenza deve poter associare a ogni transazione il suo blocco in blockchain. & Obbligatorio & UC4.4 \\
-\hline
-RFO40 & La persistenza deve poter associare ad ogni blocco il proprio timestamp. & Obbligatorio & UC4.4 \\
+RFO39 & La persistenza deve poter associare ad ogni transazione il proprio timestamp. & Obbligatorio & UC4.4 \\
 \hline
 RFO40 & La persistenza deve poter fornire i dati di una particolare transazione su richiesta del server. & Obbligatorio & UC4 \\
 \hline
