Bug fixed PdP PB

--- a/docs/esterni/piano_di_progetto/piano_di_progetto.tex
+++ b/docs/esterni/piano_di_progetto/piano_di_progetto.tex
@@ -3,6 +3,7 @@
 \usepackage{pdflscape}
 \usepackage{pgfgantt}
 \usepackage{pgfplots}
+\usepackage{pbox}
 
 
 \newcommand{\templates}{../../template}
@@ -289,6 +290,63 @@ Ruoli assegnati:\\[0.5em]
 \begin{tabular}{|l|l|l|l|l|}\hline
 Membro & Ruolo & Ore prev. & Ore eff. & Diff. ore \\\hline
 Elia Scandaletti & Verificatore & 35 & ? & ? \\\hline
+\end{tabular}
+
+\paragraph{Test Automatici Contratto (PB)}
+Inizio: ?\par
+Fine prevista: 16/03/2022\par
+Fine effettiva: TBD
+
+Ore richieste:\\[0.5em]
+\begin{tabular}{|l|l|l||l|l|l|l|}\hline
+Ruolo & Ore prev. & Ore eff. & Costi orari & Costi prev. & Costi eff.\\\hline
+Verificatore & 8 & ? & 15\euro & 120\euro & ?\euro \\\hline
+Totale ore: & 8 & ? & Totale costi: & 120\euro & ?\euro \\\hline
+\multicolumn{2}{|r|}{Differenza di ore:} & ? & \multicolumn{2}{r|}{Differenza di costo:} & ?\euro \\\hline
+\end{tabular}
+
+Ruoli assegnati:\\[0.5em]
+\begin{tabular}{|l|l|l|l|l|}\hline
+Membro & Ruolo & Ore prev. & Ore eff. & Diff. ore \\\hline
+Federico Marchi & Verificatore & 8 & ? & ? \\\hline
+\end{tabular}
+
+\paragraph{Test Automatici Server (PB)}
+Inizio: ?\par
+Fine prevista: 16/03/2022\par
+Fine effettiva: TBD
+
+Ore richieste:\\[0.5em]
+\begin{tabular}{|l|l|l||l|l|l|l|}\hline
+Ruolo & Ore prev. & Ore eff. & Costi orari & Costi prev. & Costi eff.\\\hline
+Verificatore & 30 & ? & 15\euro & 450\euro & ?\euro \\\hline
+Totale ore: & 30 & ? & Totale costi: & 450\euro & ?\euro \\\hline
+\multicolumn{2}{|r|}{Differenza di ore:} & ? & \multicolumn{2}{r|}{Differenza di costo:} & ?\euro \\\hline
+\end{tabular}
+
+Ruoli assegnati:\\[0.5em]
+\begin{tabular}{|l|l|l|l|l|}\hline
+Membro & Ruolo & Ore prev. & Ore eff. & Diff. ore \\\hline
+\pbox{20cm}{(Andrea Volpe / Matteo Galvagni\\ / Alberto Nicoletti) ?} & Verificatore & 30 & ? & ? \\\hline
+\end{tabular}
+
+\paragraph{Test Automatici Script (PB)}
+Inizio: ?\par
+Fine prevista: 16/03/2022\par
+Fine effettiva: TBD
+
+Ore richieste:\\[0.5em]
+\begin{tabular}{|l|l|l||l|l|l|l|}\hline
+Ruolo & Ore prev. & Ore eff. & Costi orari & Costi prev. & Costi eff.\\\hline
+Verificatore & 4 & ? & 15\euro & 60\euro & ?\euro \\\hline
+Totale ore: & 4 & ? & Totale costi: & 60\euro & ?\euro \\\hline
+\multicolumn{2}{|r|}{Differenza di ore:} & ? & \multicolumn{2}{r|}{Differenza di costo:} & ?\euro \\\hline
+\end{tabular}
+
+Ruoli assegnati:\\[0.5em]
+\begin{tabular}{|l|l|l|l|l|}\hline
+Membro & Ruolo & Ore prev. & Ore eff. & Diff. ore \\\hline
+\pbox{20cm}{(Giovanni Cocco / Matteo Galvagni \\/ Alberto Nicoletti / Raffaele Oliviero) ?} & Verificatore & 30 & ? & ? \\\hline
 \end{tabular}
 
 \paragraph{Grafico di Gannt}
