--- a/docs/esterni/piano_di_progetto/piano_di_progetto.tex
+++ b/docs/esterni/piano_di_progetto/piano_di_progetto.tex
@@ -238,17 +238,18 @@ Fine effettiva: TBD
 Ore richieste:\\[0.5em]
 \begin{tabular}{|l|l|l||l|l|l|l|}\hline
 Ruolo & Ore prev. & Ore eff. & Costi orari & Costi prev. & Costi eff.\\\hline
-Progettista & 20 & ? & 25\euro & 500\euro & ?\euro \\\hline
-Verificatore & 3 & ? & 15\euro & 45\euro & ?\euro \\\hline
-Totale ore: & 23 & ? & Totale costi: & 545\euro & ?\euro \\\hline
+Progettista & 25 & ? & 25\euro & 625\euro & ?\euro \\\hline
+Verificatore & 5 & ? & 15\euro & 75\euro & ?\euro \\\hline
+Totale ore: & 30 & ? & Totale costi: & 700\euro & ?\euro \\\hline
 \multicolumn{2}{|r|}{Differenza di ore:} & ? & \multicolumn{2}{r|}{Differenza di costo:} & ?\euro \\\hline
 \end{tabular}
 
 Ruoli assegnati:\\[0.5em]
 \begin{tabular}{|l|l|l|l|l|}\hline
 Membro & Ruolo & Ore prev. & Ore eff. & Diff. ore \\\hline
-Raffaele Oliviero & Progettista & 20 & ? & ? \\\hline
-Andrea Volpe & Verificatore & 3 & ? & ? \\\hline
+Raffaele Oliviero & Progettista & 15 & ? & ? \\\hline
+Andrea Volpe & Progettista & 10 & ? & ? \\\hline
+\pbox{20cm}{(Giovanni Cocco / Matteo Galvagni\\ / Federico Marchi) ?} & Verificatore & 5 & ? & ? \\\hline
 \end{tabular}
 
 \paragraph{Manuale Utente (PB)}
